--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,4 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello xasdasd Coursera!</h1>
-<h2> hahahaadsdssssha </h2>
-</body>
-</html>
+<h1>Hello xasdasd Coursera?!</h1>
