--- a/site/index.html
+++ b/site/index.html
@@ -6,4 +6,4 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course</h1>
+<h1>Hello Coursera! Let's get this going!</h1>
